Default mail access using vmail/vpopmail
On Alpine, mail related utilities are all in the mail group, and they
shouldn't have access to the stored emails.

--- a/dovecot/dovecot.conf
+++ b/dovecot/dovecot.conf
@@ -7,8 +7,8 @@ recipient_delimiter = +
 
 auth_mechanisms = plain
 
-mail_uid = mail
-mail_gid = mail
+mail_uid = vmail
+mail_gid = vpopmail
 first_valid_uid = 8
 
 passdb {
@@ -19,7 +19,7 @@ passdb {
 userdb {
     driver = passwd-file
     args = username_format=%n /etc/dovecot/passwd
-    default_fields = uid=mail gid=mail home=/var/mail/%n/home
+    default_fields = home=/var/mail/%n/home
 }
 
 
