--- a/dovecot/dovecot.conf
+++ b/dovecot/dovecot.conf
@@ -13,7 +13,7 @@ first_valid_uid = 8
 
 passdb {
     driver = passwd-file
-    args = scheme=SSHA256 username_format=%n /etc/dovecot/passwd
+    args = scheme=BLF-CRYPT username_format=%n /etc/dovecot/passwd
 }
 
 userdb {
