Fixes for Ubuntu/OpenDKIM/Postfix TLS

--- a/opendkim/opendkim.conf
+++ b/opendkim/opendkim.conf
@@ -1,11 +1,13 @@
-Domain                  {{ domains[0] }}
+Domain                  {{ ",".join(domains) }}
 Selector                {{ dkim_selector }}
 Syslog                  Yes
 UMask                   002
 UserID                  opendkim:mail
+{% if exists('/usr/share/dns/root.key') %}TrustAnchorFile         /usr/share/dns/root.key{% endif %}
 
 BaseDirectory           /run/opendkim
 TemporaryDirectory      /run/opendkim
+PidFile                 /run/opendkim/opendkim.pid
 Socket                  local:/run/opendkim/opendkim.sock
 
 KeyTable                refile:/etc/opendkim/keys
